--- a/oficina/templates/addclientes.html
+++ b/oficina/templates/addclientes.html
@@ -6,18 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
     <style media="screen">
-      *,
-      *:before,
-      *:after {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-  
       body {
-        background-color: #00041B;
+        background-color: #00041b;
+        margin: 0;
+        padding: 0;
       }
-  
+
       .background {
         width: 100%;
         height: 100vh;
@@ -28,129 +22,149 @@
         justify-content: space-around;
         align-items: center;
       }
-  
+
       .background .shape {
         height: 200px;
         width: 200px;
         border-radius: 50%;
         animation: float 10s infinite alternate;
       }
-  
+
       @keyframes float {
         to {
           transform: translateY(-50px) translateX(-10px);
         }
       }
-  
+
       .shape:nth-child(1) {
         background: linear-gradient(#1845ad, #23a2f6);
       }
-  
+
       .shape:nth-child(2) {
         background: linear-gradient(to right, #ff512f, #f09819);
       }
-  
+
       .shape:nth-child(3) {
         background: linear-gradient(#1845ad, #23a2f6);
       }
-  
+
       .shape:nth-child(4) {
         background: linear-gradient(to right, #ff512f, #f09819);
       }
-  
+
       .shape:nth-child(5) {
         background: linear-gradient(#1845ad, #23a2f6);
       }
-  
+
       .shape:nth-child(6) {
         background: linear-gradient(to right, #ff512f, #f09819);
       }
 
       .nav-side {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
-        height: 940px;
-        width: 320px;
+        height: 95%;
+        width: 250px;
         border-radius: 10px;
         border: 1px solid #ffffff;
         backdrop-filter: blur(30px);
-      }
+        position: fixed;
+        top: 0; /* Added top position */
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
 
-      .menudaoficina {
-        color: #ffffff;
-        text-align: center;
-        vertical-align: text-top;
-        font-size: 40px;
-        font-family: Poppins;
-        left: 60px;
-        top: 55px;
-        width: 220px;
-        height: 99px;
-        position: absolute;
-        line-height: 40px;
-        border-style: hidden;
-        outline: none;
-      }
+    .menudaoficina {
+      color: #ffffff;
+      text-align: center;
+      vertical-align: text-top;
+      font-size: 40px;
+      font-family: Poppins;
+      top: 55px;
+      width: 200px;
+      height: auto;
+      position: absolute;
+      line-height: 40px;
+      border-style: hidden;
+      outline: none;
+    }
 
-      .veiculos,
-      .pecas,
-      .servico,
-      .clientes,
-      .mecanicos,
-      .os {
-        background-color: #23a2f6;
-        color: #FFF;
-        text-align: center;
-        font-size: 32px;
-        font-family: Poppins;
-        width: 249px;
-        height: 70px;
-        position: absolute;
-        line-height: 45px; /* Adjusted to center text vertically */
-        border-style: hidden;
-        border-radius: 10px;
-        outline: none;
-        cursor: pointer;
-        left: 50%;
-        transform: translateX(-50%);
-        transition: background-color 0.3s, transform 0.3s;
-      }
+    .veiculos,
+    .pecas,
+    .servico,
+    .clientes,
+    .mecanicos,
+    .os {
+      background-color: #23a2f6;
+      color: #fff;
+      text-align: center;
+      font-size: 26px;
+      font-family: Poppins;
+      width: 200px;
+      height: 50px;
+      position: absolute;
+      line-height: 45px; /* Adjusted to center text vertically */
+      border-style: hidden;
+      border-radius: 10px;
+      outline: none;
+      cursor: pointer;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .veiculos {
+      top: 30%;
+      transform: translate(-50%, -50%);
+    }
+    .pecas {
+      top: 40%;
+      transform: translate(-50%, -50%);
+    }
+    .servico {
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .clientes {
+      top: 60%;
+      transform: translate(-50%, -50%);
+    }
+    .mecanicos {
+      top: 70%;
+      transform: translate(-50%, -50%);
+    }
+    .os {
+      top: 85%;
+      height: 145px;
+      line-height: 1.0;
+      transform: translate(-50%, -50%);
+    }
+
+    .veiculos:hover,
+    .pecas:hover,
+    .servico:hover,
+    .clientes:hover,
+    .mecanicos:hover,
+    .os:hover {
+      background-color: #1845ad;
+      transform: translate(-50%, -50%) scale(1.05);
+    }
       
-      .veiculos { top: 30%; transform: translate(-50%, -50%); }
-      .pecas { top: 40%; transform: translate(-50%, -50%); }
-      .servico { top: 50%; transform: translate(-50%, -50%); }
-      .clientes { top: 60%; transform: translate(-50%, -50%); }
-      .mecanicos { top: 70%; transform: translate(-50%, -50%); }
-      .os {
-        top: 85%;
-        height: 145px;
-        line-height: 1.2; /* Adjusted for the increased height */
+      form {
+        background-color: rgba(255, 255, 255, 0.13);
+        position: absolute;
         transform: translate(-50%, -50%);
-      }
-  
-      .veiculos:hover,
-      .pecas:hover,
-      .servico:hover,
-      .clientes:hover,
-      .mecanicos:hover,
-      .os:hover {
-        background-color: #1845ad; /* Change the color on hover */
-        transform: translate(-50%, -50%) scale(1.05); /* Add scale for a zoom effect on hover */
-      }
-      
-      form{
-        height: 700px;
-        width: 800px;
-        background-color: rgba(255,255,255,0.13);
-        position: absolute;
-        transform: translate(-50%,-50%);
         top: 50%;
         left: 50%;
         border-radius: 10px;
         backdrop-filter: blur(10px);
-        border: 2px solid rgba(255,255,255,0.1);
-        box-shadow: 0 0 40px rgba(8,7,16,0.6);
+        border: 2px solid rgba(255, 255, 255, 0.1);
+        box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
         padding: 50px 35px;
-    }
+      }
     form *{
         font-family: 'Poppins',sans-serif;
         color: #ffffff;
