--- a/oficina/templates/mecanicos.html
+++ b/oficina/templates/mecanicos.html
@@ -6,157 +6,160 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
     <style media="screen">
-        *,
-        *:before,
-        *:after {
-          padding: 0;
-          margin: 0;
-          box-sizing: border-box;
+      body {
+        background-color: #00041b;
+        margin: 0;
+        padding: 0;
+      }
+
+      .background {
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
+
+      .background .shape {
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        animation: float 10s infinite alternate;
+      }
+
+      @keyframes float {
+        to {
+          transform: translateY(-50px) translateX(-10px);
         }
-  
-        body {
-          background-color: #00041B;
-        }
-  
-        .background {
-          width: 1200px;
-          height: 520px;
-          position: absolute;
-          transform: translate(-50%, -50%);
-          left: 50%;
-          top: 50%;
-        }
-  
-        .background .shape {
-          height: 200px;
-          width: 200px;
-          position: absolute;
-          border-radius: 50%;
-          animation: float 10s infinite alternate;
-          /* Floating animation */
-        }
-  
-        @keyframes float {
-          to {
-            transform: translateY(-50px) translateX(-10px);
-            /* Adjust the floating distance */
-          }
-        }
-  
-        .shape:nth-child(1) {
-          background: linear-gradient(#1845ad, #23a2f6);
-          left: 40%;
-          top: 30%;
-        }
-  
-        .shape:nth-child(2) {
-          background: linear-gradient(to right, #ff512f, #f09819);
-          left: 20%;
-          top: 50%;
-        }
-  
-        .shape:nth-child(3) {
-          background: linear-gradient(#1845ad, #23a2f6);
-          right: 80%;
-          top: 10%;
-        }
-  
-        .shape:nth-child(4) {
-          background: linear-gradient(to right, #ff512f, #f09819);
-          left: 10%;
-          bottom: 10%;
-        }
-  
-        .shape:nth-child(5) {
-          background: linear-gradient(#1845ad, #23a2f6);
-          right: 40%;
-          bottom: 30%;
-        }
-  
-        .shape:nth-child(6) {
-          background: linear-gradient(to right, #ff512f, #f09819);
-          right: 20%;
-          top: 60%;
-        }
-  
-        .nav-side {
-          background-color: rgba(255, 255, 255, 0.12999999523162842);
-          height: 940px;
-          width: 320px;
-          border-radius: 10px;
-          border: 1px solid #ffffff;
-          backdrop-filter: blur(30px);
-        }
-  
-        .menudaoficina {
-          color: #ffffff;
-          text-align: center;
-          vertical-align: text-top;
-          font-size: 40px;
-          font-family: Poppins;
-          left: 60px;
-          top: 55px;
-          width: 220px;
-          height: 99px;
-          position: absolute;
-          line-height: 40px;
-          border-style: hidden;
-          outline: none;
-        }
-  
-        .veiculos,
-        .pecas,
-        .servico,
-        .clientes,
-        .mecanicos,
-        .os {
-          background-color: #23a2f6;
-          color: #FFF;
-          text-align: center;
-          font-size: 32px;
-          font-family: Poppins;
-          width: 249px;
-          height: 60px;
-          position: absolute;
-          line-height: 45px; /* Adjusted to center text vertically */
-          border-style: hidden;
-          border-radius: 10px;
-          outline: none;
-          cursor: pointer;
-          left: 50%;
-          transform: translateX(-50%);
-          transition: background-color 0.3s, transform 0.3s;
-        }
-        
-        .veiculos { top: 30%; transform: translate(-50%, -50%); }
-        .pecas { top: 40%; transform: translate(-50%, -50%); }
-        .servico { top: 50%; transform: translate(-50%, -50%); }
-        .clientes { top: 60%; transform: translate(-50%, -50%); }
-        .mecanicos { top: 70%; transform: translate(-50%, -50%); }
-        .os {
-          top: 85%;
-          height: 145px;
-          line-height: 1.2; /* Adjusted for the increased height */
-          transform: translate(-50%, -50%);
-        }
-    
-        .veiculos:hover,
-        .pecas:hover,
-        .servico:hover,
-        .clientes:hover,
-        .mecanicos:hover,
-        .os:hover {
-          background-color: #1845ad; /* Change the color on hover */
-          transform: translate(-50%, -50%) scale(1.05); /* Add scale for a zoom effect on hover */
-        }
-       
-      .container {
+      }
+
+      .shape:nth-child(1) {
+        background: linear-gradient(#1845ad, #23a2f6);
+      }
+
+      .shape:nth-child(2) {
+        background: linear-gradient(to right, #ff512f, #f09819);
+      }
+
+      .shape:nth-child(3) {
+        background: linear-gradient(#1845ad, #23a2f6);
+      }
+
+      .shape:nth-child(4) {
+        background: linear-gradient(to right, #ff512f, #f09819);
+      }
+
+      .shape:nth-child(5) {
+        background: linear-gradient(#1845ad, #23a2f6);
+      }
+
+      .shape:nth-child(6) {
+        background: linear-gradient(to right, #ff512f, #f09819);
+      }
+
+      .nav-side {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
-        width: 800px;
+        height: 95%;
+        width: 250px;
         border-radius: 10px;
         border: 1px solid #ffffff;
-        margin-top: -800px;
-        margin-left: 500px;
+        backdrop-filter: blur(30px);
+        position: fixed;
+        top: 0; /* Added top position */
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+
+      .menudaoficina {
+        color: #ffffff;
+        text-align: center;
+        vertical-align: text-top;
+        font-size: 40px;
+        font-family: Poppins;
+        top: 55px;
+        width: 200px;
+        height: auto;
+        position: absolute;
+        line-height: 40px;
+        border-style: hidden;
+        outline: none;
+      }
+
+      .veiculos,
+      .pecas,
+      .servico,
+      .clientes,
+      .mecanicos,
+      .os {
+        background-color: #23a2f6;
+        color: #fff;
+        text-align: center;
+        font-size: 26px;
+        font-family: Poppins;
+        width: 200px;
+        height: 50px;
+        position: absolute;
+        line-height: 45px; /* Adjusted to center text vertically */
+        border-style: hidden;
+        border-radius: 10px;
+        outline: none;
+        cursor: pointer;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: background-color 0.3s, transform 0.3s;
+      }
+
+      .veiculos {
+        top: 30%;
+        transform: translate(-50%, -50%);
+      }
+      .pecas {
+        top: 40%;
+        transform: translate(-50%, -50%);
+      }
+      .servico {
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .clientes {
+        top: 60%;
+        transform: translate(-50%, -50%);
+      }
+      .mecanicos {
+        top: 70%;
+        transform: translate(-50%, -50%);
+      }
+      .os {
+        top: 85%;
+        height: 145px;
+        line-height: 1.0;
+        transform: translate(-50%, -50%);
+      }
+
+      .veiculos:hover,
+      .pecas:hover,
+      .servico:hover,
+      .clientes:hover,
+      .mecanicos:hover,
+      .os:hover {
+        background-color: #1845ad;
+        transform: translate(-50%, -50%) scale(1.05);
+      }
+
+      .container {
+        background-color: rgba(255, 255, 255, 0.12999999523162842);
+        width: 600px;
+        border-radius: 10px;
+        border: 1px solid #ffffff;
+        margin-top: 60px;
+        margin-left: 350px;
         position: relative;
         backdrop-filter: blur(30px);
         display: flex;
@@ -189,13 +192,13 @@
       
       .container-add {
         background-color: rgba(255, 255, 255, 0.12999999523162842);
-        height: 322px;
-        width: 317px;
+        height: 200px;
+        width: 200px;
         border-radius: 10px;
         border: 1px solid #ffffff;
         position: fixed;
-        margin-top: -200px;
-        left: 1400px; 
+        margin-top: -350px;
+        left: 65%; 
         backdrop-filter: blur(30px);
         display: flex;
         flex-direction: column;
@@ -256,6 +259,48 @@
               display: block;
               font-weight: bold;
               color: #fff;
+            }
+
+            @media only screen and (max-width: 1200px) {
+              .nav-side {
+                width: 100%;
+                left: 0;
+              }
+            
+              .veiculos,
+              .pecas,
+              .servico,
+              .clientes,
+              .mecanicos,
+              .os {
+                width: 100%;
+                left: 0;
+                transform: translateX(0);
+              }
+            
+              .container {
+                width: 100%;
+                margin-left: 0;
+              }
+            
+              .container-add {
+                width: 100%;
+                left: 0;
+                margin-top: 0;
+              }
+            }
+            
+            @media only screen and (max-width: 600px) {
+              .container,
+              .container-add {
+                width: 100%;
+                margin-left: 0;
+                left: 0;
+              }
+            
+              .container-add {
+                margin-top: 20px;
+              }
             }
 
             .mecanicos {
